--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ ul.breadcrumbs {
   padding-right: 10px;
 }
 .sceditor-container {
-  height: 210px !important;  
+  height: 550px !important;  
   width:100% !important;
 }
 input[type=text] {
@@ -273,6 +273,14 @@ div["data-schemaid"="root"] {
   font-size: 49px;
   color: #999 !important;
   margin: 33px 0px;
+}
+
+#app > div > div > table > thead > tr > td {
+  color: #333 !important;
+  text-transform: capitalize;
+}
+#app > div > div > table tr > td {
+  padding:15px !important;
 }
 
 table.table.table-bordered tbody tr {
